# ScaleWoB

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  REUSE.toml  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: publish.yaml
src/scalewob/: __init__.py  api.py  automation.py  exceptions.py
